# kankan

./: .gitignore  README.md  dataset  pyproject.toml  vecscan
kankan/: backend.py  frontend.py  genre.py
scripts/: stat_spot_freq.py  stat_word_freq.py
