[tool.poetry]
name = "kankan"
version = "0.1.0"
description = "search engine for kanko spot"
authors = ["ma.chunpeng <ma.chunpeng@megagon.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
openai = "^0.27.9"
matplotlib = "^3.7.2"
plotly = "^5.16.1"
scipy = "1.9.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
